Removed NisB experiments, replaced SMB jar with new version including update method, simplified and corrected documenting of experiments